# Puzz_ws

./: LICENSE  README.md
green_tracker_pkg/: package.xml  setup.cfg  setup.py
green_tracker_pkg/config/: configg.yaml
green_tracker_pkg/green_tracker_pkg/: closedgreencontroller.py  cmd_vel_safe_publisher.py  green_tracker_node.py  pose_estimatorg.py  semaforo_node.py
green_tracker_pkg/launch/: semaforo_system_launch.py
install/: local_setup.sh  setup.sh
install/puzzlebot_control/lib/puzzlebot_control/: open_loop_ctrl
install/puzzlebot_control/share/puzzlebot_control/: package.sh  package.xml
log/: latest_build
mi_control_puzzlebot/: package.xml  setup.cfg  setup.py
mi_control_puzzlebot/mi_control_puzzlebot/: mover_puzzlebot.py
my_navigation_system/: CMakeLIsts.txt  package.xml  setup.cfg  setup.py
my_navigation_system/config/: controllers.yaml
my_navigation_system/launch/: closed_loop_launch.py  empty_world.launch.py  navigation.launch.py  navigation_gui_launch.py  puzzlebot_control.launch.py
my_navigation_system/my_navigation_system/: closed_loop_controller.py  controller_node.py  path_generator_node.py  pose_estimate.py  sim_rviz_node.py  trajectory_gui_node.py
my_navigation_system/urdf/: puzzlebot.urdf.xacro
my_navigation_system/worlds/: world_empty.sdf
open_loop_control/: package.xml  setup.cfg  setup.py
open_loop_control/open_loop_control/: mover_puzzlebot.py.save  open_loop.py
pb_camera_bridge/: package.xml  setup.cfg  setup.py
pb_camera_bridge/pb_camera_bridge/: http_camera_streamer.py
person_follower/: package.xml  setup.py
person_follower/person_follower/: person_follower_controller_node.py  yolo_person_tracker_node.py
puzzlebot_control/: setup.py
puzzlebot_control/puzzlebot_control/: closed_loop_ctrl.py  open_loop_ctrl.py  pose_estimator.py
puzzlebot_control/puzzlebot_control/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
puzzlebot_control/puzzlebot_control/log/: latest_build
puzzlebot_navigation/: package.xml  setup.cfg  setup.py
puzzlebot_navigation/puzzlebot_navigation/: buzzer.py  chess_flag_detector.py  follow_line_with_traffic_node.py  follow_traffic_chess_node.py  gstreamer.py  intersect_node.py  navigate_to_marker_node.py
puzzlebot_teleop/: package.xml  setup.cfg  setup.py
puzzlebot_teleop/launch/: teleop_launch.py
puzzlebot_teleop/puzzlebot_teleop/: teleop_joystick_node.py
runs/detect/senales_trafico_v15/: args.yaml  results.csv
te3002b_sim_bridge/: package.xml  setup.cfg  setup.py
te3002b_sim_bridge/te3002b_sim_bridge/: rpc_image_node.py  te3002b_pb2.py  te3002b_pb2_grpc.py
traffic_signs_dataset/: detect_traffic_signs.py  index.py  noyolo.py  package.xml  setup.cfg  setup.py  train_signs.py
traffic_signs_dataset/data/: README.dataset.txt  README.roboflow.txt  data.yaml
traffic_signs_dataset/data/train/: labels.cache
traffic_signs_dataset/data/train/labels/: Captura-desde-2025-05-27-12-42-17_png.rf.f35b5def14b448f8d61a7967937b2cfd.txt  Captura-desde-2025-05-27-12-43-05_png.rf.66dcdea794d56582a3462136f4723d1c.txt  Captura-desde-2025-05-27-12-43-31_png.rf.d4f281567c5285ebdbfcfc5ac5e12091.txt  Captura-desde-2025-05-27-12-43-54_png.rf.0ef9a8fbb6f180183460828da8f071a1.txt  (+4 more)
traffic_signs_dataset/data/valid/: labels.cache
traffic_signs_dataset/launch/: puzz_final_launch.py
traffic_signs_dataset/traffic_signs_dataset/: detect_traffic_signs.py  flag_detector_node.py  intersection_detector_node.py  line_follower_node.py  line_intersect_signs.py  line_intersect_traffic_signs.py  stoplight_detector_node.py  track_navigator_node.py  yolo_sign_detector_node.py
(+7 files in other folders)
