<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puzzlebot_teleop</name>
  <version>0.0.0</version>
  <description>Teleoperación del Puzzlebot con control PS4 usando joy_node</description>

  <maintainer email="felipe@todo.todo">felipe</maintainer>
  <license>MIT</license>

  <!-- Dependencias principales -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Dependencia en tiempo de ejecución para joy_node -->
  <exec_depend>joy</exec_depend>

  <!-- Dependencias de testeo -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
